# LeoEngine

./: .gitignore  All.sln  CMakeLists.txt  LeoEngine.sln  ReadMe  issue.txt  头文件约定.txt  开发目标.txt
Engine/: CMakeLists.txt  CameraController.h  CoreTypes.h  Engine.vcxproj  Engine.vcxproj.filters  Render.vcxproj  Render.vcxproj.filters  emacro.h  test.cpp  test.h
Engine/Asset/: CompressionBC.cpp  CompressionBC.hpp  CompressionETC.cpp  CompressionETC.hpp  D3DShaderCompiler.cpp  D3DShaderCompiler.h  DDSX.h  EffectAsset.cpp  EffectAsset.h  EffectX.cpp  EffectX.h  LSLAssetX.h  Loader.hpp  MaterialAsset.h  MaterialX.cpp  MaterialX.h  MeshAsset.h  MeshX.cpp  MeshX.h  RayTracingX.cpp  RayTracingX.h  ShaderAsset.cpp  ShaderAsset.h  ShaderLoadingDesc.h  TexCompression.cpp  TexCompression.hpp  TextureX.cpp  TextureX.h
Engine/Core/: AssetResourceScheduler.cpp  AssetResourceScheduler.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  GraphicsEngine.cpp  GraphicsEngine.h  LFile.h  LSLBuilder.cpp  LSLBuilder.h  LSLEvaluator.cpp  LSLEvaluator.h  LeoEngine.cpp  LeoEngine.h  Materail.cpp  Materail.h  Mesh.cpp  Mesh.h  Path.cpp  Path.h  Resource.h  ResourcesHolder.h  ViewPort.h  WhiteEngine.cpp  WhiteEngine.h
Engine/GraphicsPipeline/: GraphicsView.cpp  GraphicsView.h  IGraphicsPipelineStage.cpp  IGraphicsPipelineStage.h  IGraphicsView.h  ShadingPipeline.h
Engine/Math/: BoxSphereBounds.h  IntRect.h  InverseRotationMatrix.h  RotationMatrix.h  Rotator.h  ScaleMatrix.h  ShadowProjectionMatrix.h  Sphere.h  TranslationMatrix.h
Engine/Render/: BuiltInRayTracingShader.cpp  BuiltInRayTracingShader.h  BuiltInShader.cpp  BuiltInShader.h  Color_T.cpp  Color_T.hpp  CommonRenderResources.cpp  CommonRenderResources.h  CommonTextureImpl.hcc  DataStructures.h  DeviceCaps.h  DrawEvent.cpp  DrawEvent.h  FrameBuffer.cpp  GraphicsBuffer.cpp  ICommandContext.h  ICommandList.cpp  ICommandList.h  IContext.cpp  IContext.h  IDevice.h  IDisplay.h  IFormat.hpp  IFrameBuffer.cpp  IFrameBuffer.h  IGPUResourceView.h  IGraphicsBuffer.hpp  IGraphicsPipelineState.h  IRayContext.h  IRayDevice.h  IRayTracingGeometry.h  IRayTracingPipelineState.h  IRayTracingScene.h  IRayTracingShader.h  IRenderView.h  IShader.h  IShaderCompose.h  ITexture.cpp  ITexture.hpp  InputLayout.cpp  (+33 more)
Engine/Renderer/: ScreenRendering.cpp  ScreenRendering.h  ScreenSpaceDenoiser.cpp  ScreenSpaceDenoiser.h  ShadowRendering.cpp  ShadowRendering.h  VolumeRendering.cpp  VolumeRendering.h
Engine/Runtime/: DirectionalLight.cpp  DirectionalLight.h  GizmosElements.cpp  GizmosElements.h  Light.cpp  Light.h  SceneClasses.h  SceneInfo.h  SceneRendering.cpp
Engine/Shaders/: ACES.lsl  Common.h  Common.lsl  GammaCorrectionCommon.lsl  MonteCarlo.h  MonteCarlo.lsl  Random.h  RandomSequence.lsl  ShadowDepthVertexShader.lsl  ShadowProjectionPixelShader.lsl
Engine/System/: NinthTimer.cpp  NinthTimer.h  SystemEnvironment.cpp  SystemEnvironment.h  TimeValue.h
Engine/Win32/: COM.h  File.cpp  File.h  Handle.h  NTHandle.cpp  NTHandle.h  WindowsPlatformMath.h
LBase/: CMakeLists.txt  ConcurrentHashMap.h  Debug.cpp  Debug.h  FCommon.cpp  FCommon.h  FContainer.h  FFileIO.cpp  FFileIO.h  FReference.h  Host.cpp  Host.h  LAdaptor.h  LBase.cpp  LBase.natvis  LBase.vcxproj  LBase.vcxproj.filters  LConsole.h  LCoreUtilities.h  LException.cpp  LException.h  LPath.hpp  LShellDefinition.h  Mutex.h  NativeAPI.h  Platform.h  addressof.hpp  algorithm.hpp  any.cpp  any.h  any_iterator.hpp  array.hpp  cache.hpp  cassert.cpp  cassert.h  cast.hpp  cctype.h  cformat.cpp  cformat.h  concurrency.cpp  (+62 more)
LBase/CHRLib/: CharacterMapping.h  CharacterProcessing.cpp  CharacterProcessing.h  Convert.hpp  MappingEx.cpp  MappingEx.h  StaticMapping.hpp
LBase/MCF/: Abstract.hpp
LBase/Win32/: Consoles.cpp  Consoles.h  MinGW32.cpp  Mingw32.h  NLS.cpp  NLS.h
LBase/experimental/: string_view.hcc  (+1 more)
LScheme/: CMakeLists.txt  ClearRenderTarget.ssl  ClearRenderTarget.sxml  ClearRenderTargetv1.sxml  Configuration.cpp  Configuration.h  LEvent.hpp  LObject.cpp  LObject.h  LSchemREPL.h  LScheme.cpp  LScheme.h  LScheme.vcxproj  LScheme.vcxproj.filters  LSchemeA.cpp  LSchemeA.h  Lexical.cpp  Lexical.h  SContext.cpp  SContext.h  ValueNode.cpp  ValueNode.h  doc.txt  inc_Sxml.h  sdef.cpp  sdef.h
(+1020 files in other folders)
